2003-01-06  Atsushi Enomoto <atsushi@ximian.com>

	* DirectoryTest.cs : remoed incorrect args.

2003-12-25  Atsushi Enomoto <atsushi@ximian.com>

	* PathTest.cs : On Unix, "Z:" can be valid local file.
	  And cosmetic character case fix.

2003-12-19  Nick Drochak <ndrochak@gol.com>

	* PathTest.cs: Make tests pass on .NET 1.1.  Probably still
	need to handle different directory and volume separators for
	other OS's.

2003-12-17  Atsushi Enomoto <atsushi@ximian.com>

        * PathTest.cs :
	  Added more GetPathRoot and GetFullPath tests for windows.
	  Fixed incorrectly specified arguments in the previous patch.

2003-12-17  Atsushi Enomoto <atsushi@ximian.com>

        * PathTest.cs : Added more tests for IsPathRooted, HasExtension
	  and GetExtension.

2003-12-17  Atsushi Enomoto <atsushi@ximian.com>

        * DirectoryTests.cs : Added some SetCurrentDirectory tests.

2003-12-17  Nick Drochak <ndrochak@gol.com>

	* FileStreamTest.cs: Ok, it wasn't a 1.1 thing.  The test simply would
	fail randomly because location 12 was sometimes a file handle.

2003-12-16  Nick Drochak <ndrochak@gol.com>

	* FileStreamTest.cs: Exception not thrown in .NET 1.1.
	And Happy Birthday to Me!

2003-11-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* StringReaderTest.cs: added test from bug #51020.

2003-10-21  Nick Drochak <ndrochak@gol.com>

	* BufferedSTreamTest.cs: Make TearDown smarter about possible
	null member value.

2003-07-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MemoryStreamTest.cs: added a couple of tests for WriteByte.

2003-06-30  Zoltan Varga  <vargaz@freemail.hu>

	* FileStreamTest.cs: New tests for flushing when disposed and zero
	buffer size.

2003-06-18  Nick Drochak <ndrochak@gol.com>

	* FileSystemInfoTest.cs: Simplify a bit.

2003-06-18  Nick Drochak <ndrochak@gol.com>

	* FileSystemInfoTest.cs: Works on .NET 1.1 now. If these values are
	different on 1.0 then we need to wrap with a #if NET_1_1.

2003-06-12  Zoltan Varga  <vargaz@freemail.hu>
