@@ -1,3 +1,7 @@
+2004-01-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* PathTest.cs: a couple of tests for bugs.
+
 2003-01-06  Atsushi Enomoto <atsushi@ximian.com>
 
 	* DirectoryTest.cs : remoed incorrect args.
